# ffp

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  __init__.py  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: claude-code-review.yml  claude.yml
docs/: fact_check_agent.md  x_telegram_bot.md
ffp/: config.py  database.py  database_factory.py  database_postgres.py  database_sqlite.py  main.py  message_processor.py  show_errors.py  telegram_client.py  twitter_client.py  utils.py
ffp/agent/fact_checker/: agent.py  claim_extractor.py  database.py  models.py  tools.py
ffp/auth/: initial_auth.py
ffp/client/: telegram_client.py  twitter_client.py
ffp/config/: config.py
ffp/database/: database_factory.py  database_sqlite.py
ffp/services/: message_processor.py
scripts/: init.sql
